--- a/DevslopesSocial/Info.plist
+++ b/DevslopesSocial/Info.plist
@@ -61,7 +61,7 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Allow access to camera for personal profile picture.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow access to camera to make your profile picture</string>
 </dict>
 </plist>
